# oarepo-model-builder-cf

./: .gitignore  README.md  format.sh  run-tests.sh  setup.cfg
.github/workflows/: build.yaml  main.yml
oarepo_model_builder_cf/templates/: record.py.jinja2
tests/: conftest.py
tests/cf/: setup.cfg
tests/cf/cf/: cli.py  config.py  ext.py  proxies.py  views.py
tests/cf/cf/models/: model.json
tests/cf/cf/records/: api.py  dumper.py  models.py
tests/cf/cf/records/jsonschemas/: cf-1.0.0.json
tests/cf/cf/records/mappings/os-v2/cf/: cf-1.0.0.json
tests/cf/cf/resources/records/: config.py  resource.py
tests/cf/cf/services/records/: config.py  facets.py  permissions.py  schema.py  search.py  service.py
tests/cf/data/: sample_data.yaml
