

[metadata]
name = cf
version = 1.0.0
description = A sample application for cf
authors = 


[options]
python = >=3.9
install_requires =
    invenio_access>=1.4.4
    invenio_app>=1.3.4
    invenio_db>=1.0.14
    invenio_pidstore>=1.2.3
    invenio_records>=2.0.0
    invenio-records-rest>=2.1.0
    invenio_records_permissions>=0.13.0
    invenio_records_resources>=0.21.4
    invenio-search>=2.1.0
    tqdm>=4.64.1
    oarepo-runtime>=1.0.0
packages = find:


[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2


[options.entry_points]
invenio_base.api_apps = cf = cf.ext:CfExt
invenio_base.apps = cf = cf.ext:CfExt
invenio_db.alembic = cf = cf:alembic
invenio_db.models = cf = cf.records.models
invenio_base.api_blueprints = cf = cf.views:create_blueprint_from_app_cf
invenio_search.mappings = cf = cf.records.mappings
invenio_jsonschemas.schemas = cf = cf.records.jsonschemas
oarepo.models = cf = cf.models:model.json
flask.commands = cf = cf.cli:group
